test-suite/output/ErrorLocation_ltac_4.out
File "./output/ErrorLocation_ltac_4.v", line 2, characters 22-23:
Error: Tactic failure.

