test-suite/output/ErrorLocation_ltac_4.v
Goal False.
let x := fail in x || x.
Abort.
